feat: ESP32 통신연결, 간단한 데이터 주고받기. 권한 요청기능 시도

--- a/bluetooth_app/app/src/main/res/layout/activity_main.xml
+++ b/bluetooth_app/app/src/main/res/layout/activity_main.xml
@@ -27,26 +27,41 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/deviceList" />
 
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayout"
+        android:layout_width="203dp"
+        android:layout_height="54dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/deviceBtn">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/inputText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="hint" />
+    </com.google.android.material.textfield.TextInputLayout>
+
     <Button
         android:id="@+id/sendTest"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="208dp"
+        android:layout_marginStart="8dp"
         android:text="send test"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scrollView" />
+        app:layout_constraintStart_toEndOf="@+id/textInputLayout"
+        app:layout_constraintTop_toTopOf="@+id/textInputLayout" />
 
     <TextView
         android:id="@+id/recvTest"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="24dp"
         android:text="recv test"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sendTest" />
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
 
     <ScrollView
         android:id="@+id/scrollView"
@@ -161,6 +176,13 @@
                         android:text="연결 됨"
                         android:textSize="20sp" />
 
+                    <Button
+                        android:id="@+id/againBtn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0"
+                        android:text="다시 연결" />
+
                 </LinearLayout>
 
                 <LinearLayout
@@ -191,4 +213,5 @@
 
         </LinearLayout>
     </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
