--- a/EYAK(rev2)/app/src/main/res/layout/activity_login.xml
+++ b/EYAK(rev2)/app/src/main/res/layout/activity_login.xml
@@ -53,25 +53,88 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="60dp"
+            android:background="#f23143"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/googleLogo"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center|center_horizontal"
                 android:layout_weight="1"
                 app:srcCompat="@drawable/google_logo" />
 
             <TextView
                 android:id="@+id/googleLoginText"
-                android:layout_width="121dp"
-                android:layout_height="30dp"
+                android:layout_width="120dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
                 android:layout_weight="1"
-                android:background="#000000"
                 android:fontFamily="@font/tmoney_regular"
                 android:gravity="center"
-                android:text="구글로 간편 로그인" />
+                android:text="구글로 간편 로그인"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp" />
+
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginTop="10dp"
+            android:background="#59b04d"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/navarLogo"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/naver_logo" />
+
+            <TextView
+                android:id="@+id/naverLoginText"
+                android:layout_width="120dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:fontFamily="@font/tmoney_regular"
+                android:gravity="center"
+                android:text="네이버로 간편 로그인"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginTop="10dp"
+            android:background="#fee600"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/navarLogo2"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/kakao_logo" />
+
+            <TextView
+                android:id="@+id/kakaoLoginText"
+                android:layout_width="120dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:fontFamily="@font/tmoney_regular"
+                android:gravity="center"
+                android:text="카카오로 간편 로그인"
+                android:textColor="#000000"
+                android:textSize="20sp" />
+        </LinearLayout>
+
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
