--- a/EYAK(rev2)/app/src/main/res/layout/activity_login.xml
+++ b/EYAK(rev2)/app/src/main/res/layout/activity_login.xml
@@ -9,10 +9,10 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="230dp"
+        android:layout_height="230dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="40dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/eyak_logo" />
@@ -23,6 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:fontFamily="@font/tmoney_regular"
+        android:gravity="center"
         android:text="내 손안에 작은 의사"
         android:textSize="34sp"
         app:layout_constraintStart_toStartOf="@+id/imageView2"
@@ -43,7 +44,7 @@
         android:layout_width="0dp"
         android:layout_height="260dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="20dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
@@ -58,7 +59,7 @@
 
             <ImageView
                 android:id="@+id/googleLogo"
-                android:layout_width="40dp"
+                android:layout_width="10dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center|center_horizontal"
                 android:layout_weight="1"
@@ -66,7 +67,7 @@
 
             <TextView
                 android:id="@+id/googleLoginText"
-                android:layout_width="120dp"
+                android:layout_width="150dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:layout_weight="1"
@@ -87,7 +88,7 @@
 
             <ImageView
                 android:id="@+id/navarLogo"
-                android:layout_width="40dp"
+                android:layout_width="10dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:layout_weight="1"
@@ -95,7 +96,7 @@
 
             <TextView
                 android:id="@+id/naverLoginText"
-                android:layout_width="120dp"
+                android:layout_width="150dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:layout_weight="1"
@@ -115,7 +116,7 @@
 
             <ImageView
                 android:id="@+id/navarLogo2"
-                android:layout_width="40dp"
+                android:layout_width="10dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:layout_weight="1"
@@ -123,7 +124,7 @@
 
             <TextView
                 android:id="@+id/kakaoLoginText"
-                android:layout_width="120dp"
+                android:layout_width="150dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:layout_weight="1"
