--- a/EYAK(rev2)/app/src/main/res/layout/device_tab_main.xml
+++ b/EYAK(rev2)/app/src/main/res/layout/device_tab_main.xml
@@ -86,7 +86,11 @@
         android:id="@+id/medicineScroll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="30dp"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/deviceScroll">
 
         <LinearLayout
