--- a/EYAK(rev2)/app/src/main/res/layout/activity_main.xml
+++ b/EYAK(rev2)/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/toolbar"
         android:layout_width="0dp"
         android:layout_height="86dp"
-        android:background="#C4D7B2"
+        android:background="#F6FFDE"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,7 +47,7 @@
         android:id="@+id/BottomLinearLayout"
         android:layout_width="0dp"
         android:layout_height="86dp"
-        android:background="#C4D7B2"
+        android:background="#F6FFDE"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -61,7 +61,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             app:srcCompat="@drawable/baseline_access_time_24"
-            app:tint="#FFFFFF" />
+            app:tint="#C9DBB2" />
 
         <ImageView
             android:id="@+id/medicineTab"
@@ -69,7 +69,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             app:srcCompat="@drawable/baseline_medication_24"
-            app:tint="#FFFFFF" />
+            app:tint="#C9DBB2" />
 
         <ImageView
             android:id="@+id/familyTab"
@@ -77,7 +77,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             app:srcCompat="@drawable/baseline_family_restroom_24"
-            app:tint="#FFFFFF" />
+            app:tint="#C9DBB2" />
 
         <ImageView
             android:id="@+id/deviceTab"
@@ -85,7 +85,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             app:srcCompat="@drawable/baseline_all_inbox_24"
-            app:tint="#FFFFFF" />
+            app:tint="#C9DBB2" />
     </LinearLayout>
 
     <TextView
