--- a/EYAK(rev2)/app/src/main/res/layout/activity_signup.xml
+++ b/EYAK(rev2)/app/src/main/res/layout/activity_signup.xml
@@ -78,7 +78,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
                 android:layout_marginTop="10dp"
-                android:backgroundTint="#C4D7B2"
+                android:backgroundTint="#E3F2C1"
                 android:fontFamily="@font/tmoney_bold"
                 android:text="닉네임 중복 검사"
                 android:textColor="#757863" />
@@ -476,7 +476,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="50dp"
-                android:backgroundTint="#C4D7B2"
+                android:backgroundTint="#E3F2C1"
                 android:fontFamily="@font/tmoney_bold"
                 android:text="회원 가입"
                 android:textColor="#757863" />
