--- a/EYAK(rev2)/app/src/main/res/layout/activity_signup.xml
+++ b/EYAK(rev2)/app/src/main/res/layout/activity_signup.xml
@@ -65,9 +65,9 @@
                     android:layout_weight="1"
                     android:ems="10"
                     android:fontFamily="@font/tmoney_regular"
+                    android:hint="닉네임을 입력하세요."
                     android:includeFontPadding="false"
                     android:inputType="text"
-                    android:text="닉네임을 입력하세요"
                     android:textColor="#757863"
                     android:textSize="16sp" />
 
