--- a/EYAK(rev2)/app/src/main/res/layout/alarm_tab_list_view_item.xml
+++ b/EYAK(rev2)/app/src/main/res/layout/alarm_tab_list_view_item.xml
@@ -11,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="20dp"
-        app:cardCornerRadius="30dp"
+        app:cardBackgroundColor="#DDE6ED"
+        app:cardCornerRadius="20dp"
         tools:layout_editor_absoluteX="20dp"
         tools:layout_editor_absoluteY="10dp">
 
