fix: 메인 페이지 수정

--- a/EYAK(rev2)/app/src/main/res/layout/activity_main.xml
+++ b/EYAK(rev2)/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     tools:context=".MainActivity">
 
     <FrameLayout
+        android:id="@+id/frameLayout"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="#F6FFDE">
@@ -104,6 +105,6 @@
         app:layout_constraintBottom_toTopOf="@+id/BottomLinearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
