--- a/EYAK(rev2)/app/src/main/res/layout/activity_edit_member.xml
+++ b/EYAK(rev2)/app/src/main/res/layout/activity_edit_member.xml
@@ -49,9 +49,9 @@
 
                 <TextView
                     android:id="@+id/nickNameText"
-                    android:layout_width="32dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:ems="3"
                     android:fontFamily="@font/tmoney_bold"
                     android:text="닉네임:"
                     android:textColor="#757863"
