fix: 회원 가입 비율 조정

--- a/EYAK(rev2)/app/src/main/res/layout/activity_edit_member.xml
+++ b/EYAK(rev2)/app/src/main/res/layout/activity_edit_member.xml
@@ -64,8 +64,8 @@
                     android:layout_weight="1"
                     android:fontFamily="@font/tmoney_regular"
                     android:gravity="center"
+                    android:hint="닉네임이 들어오는 자리"
                     android:includeFontPadding="false"
-                    android:text="TextView"
                     android:textColor="#757863"
                     android:textSize="16sp" />
 
@@ -113,9 +113,10 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_weight="5"
-                            android:ems="3"
-                            android:fontFamily="@font/tmoney_bold"
+                            android:ems="2"
+                            android:fontFamily="@font/tmoney_regular"
                             android:gravity="center"
+                            android:includeFontPadding="false"
                             android:text="일어나는 시간: "
                             android:textAlignment="viewEnd"
                             android:textColor="#757863"
@@ -185,9 +186,10 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_weight="5"
-                            android:ems="3"
-                            android:fontFamily="@font/tmoney_bold"
+                            android:ems="2"
+                            android:fontFamily="@font/tmoney_regular"
                             android:gravity="center"
+                            android:includeFontPadding="false"
                             android:text="아침 식사 시간: "
                             android:textAlignment="viewEnd"
                             android:textColor="#757863"
@@ -259,9 +261,10 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_weight="5"
-                            android:ems="3"
-                            android:fontFamily="@font/tmoney_bold"
+                            android:ems="2"
+                            android:fontFamily="@font/tmoney_regular"
                             android:gravity="center"
+                            android:includeFontPadding="false"
                             android:text="점심 식사 시간: "
                             android:textAlignment="viewEnd"
                             android:textColor="#757863"
@@ -332,9 +335,10 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_weight="5"
-                            android:ems="3"
-                            android:fontFamily="@font/tmoney_bold"
+                            android:ems="2"
+                            android:fontFamily="@font/tmoney_regular"
                             android:gravity="center"
+                            android:includeFontPadding="false"
                             android:text="저녁 식사 시간: "
                             android:textAlignment="viewEnd"
                             android:textColor="#757863"
@@ -405,9 +409,10 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_weight="5"
-                            android:ems="3"
-                            android:fontFamily="@font/tmoney_bold"
+                            android:ems="2"
+                            android:fontFamily="@font/tmoney_regular"
                             android:gravity="center"
+                            android:includeFontPadding="false"
                             android:text="잠자는 시간: "
                             android:textAlignment="viewEnd"
                             android:textColor="#757863"
@@ -477,9 +482,10 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_weight="5"
-                            android:ems="3"
-                            android:fontFamily="@font/tmoney_bold"
+                            android:ems="2"
+                            android:fontFamily="@font/tmoney_regular"
                             android:gravity="center"
+                            android:includeFontPadding="false"
                             android:text="식사 시간: "
                             android:textAlignment="viewEnd"
                             android:textColor="#757863"
