--- a/EYAK(rev2)/app/src/main/res/layout/activity_signup.xml
+++ b/EYAK(rev2)/app/src/main/res/layout/activity_signup.xml
@@ -124,9 +124,10 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_weight="5"
-                            android:ems="3"
-                            android:fontFamily="@font/tmoney_bold"
+                            android:ems="2"
+                            android:fontFamily="@font/tmoney_regular"
                             android:gravity="center"
+                            android:includeFontPadding="false"
                             android:text="일어나는 시간:"
                             android:textAlignment="viewEnd"
                             android:textColor="#757863"
@@ -196,9 +197,10 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_weight="5"
-                            android:ems="3"
-                            android:fontFamily="@font/tmoney_bold"
+                            android:ems="2"
+                            android:fontFamily="@font/tmoney_regular"
                             android:gravity="center"
+                            android:includeFontPadding="false"
                             android:text="아침 식사 시간:"
                             android:textAlignment="viewEnd"
                             android:textColor="#757863"
@@ -270,9 +272,10 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_weight="5"
-                            android:ems="3"
-                            android:fontFamily="@font/tmoney_bold"
+                            android:ems="2"
+                            android:fontFamily="@font/tmoney_regular"
                             android:gravity="center"
+                            android:includeFontPadding="false"
                             android:text="점심 식사 시간:"
                             android:textAlignment="viewEnd"
                             android:textColor="#757863"
@@ -343,9 +346,10 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_weight="5"
-                            android:ems="3"
-                            android:fontFamily="@font/tmoney_bold"
+                            android:ems="2"
+                            android:fontFamily="@font/tmoney_regular"
                             android:gravity="center"
+                            android:includeFontPadding="false"
                             android:text="저녁 식사 시간:"
                             android:textAlignment="viewEnd"
                             android:textColor="#757863"
@@ -416,9 +420,10 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_weight="5"
-                            android:ems="3"
-                            android:fontFamily="@font/tmoney_bold"
+                            android:ems="2"
+                            android:fontFamily="@font/tmoney_regular"
                             android:gravity="center"
+                            android:includeFontPadding="false"
                             android:text="잠자는 시간:"
                             android:textAlignment="viewEnd"
                             android:textColor="#757863"
@@ -488,9 +493,10 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_weight="5"
-                            android:ems="3"
-                            android:fontFamily="@font/tmoney_bold"
+                            android:ems="2"
+                            android:fontFamily="@font/tmoney_regular"
                             android:gravity="center"
+                            android:includeFontPadding="false"
                             android:text="식사 시간:"
                             android:textAlignment="viewEnd"
                             android:textColor="#757863"
