--- a/EYAK(rev2)/app/src/main/res/layout/activity_login.xml
+++ b/EYAK(rev2)/app/src/main/res/layout/activity_login.xml
@@ -24,6 +24,7 @@
         android:layout_marginTop="10dp"
         android:fontFamily="@font/tmoney_regular"
         android:gravity="center"
+        android:includeFontPadding="false"
         android:text="내 손안에 작은 의사"
         android:textSize="34sp"
         app:layout_constraintStart_toStartOf="@+id/loginPageLogo"
@@ -45,10 +46,12 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
+        android:gravity="center_horizontal"
         android:orientation="vertical"
+        android:weightSum="6"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -56,87 +59,50 @@
 
         <LinearLayout
             android:id="@+id/googleLoginLinearLayout"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:background="#f23143"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/googleLogo"
-                android:layout_width="10dp"
-                android:layout_height="40dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_gravity="center|center_horizontal"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/google_logo" />
-
-            <TextView
-                android:id="@+id/googleLoginText"
-                android:layout_width="150dp"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:fontFamily="@font/tmoney_regular"
-                android:gravity="center"
-                android:text="구글로 간편 로그인"
-                android:textColor="#FFFFFF"
-                android:textSize="20sp" />
+                app:srcCompat="@drawable/btn_google_signin_dark_normal" />
 
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_width="300dp"
+            android:layout_height="80dp"
             android:layout_marginTop="10dp"
-            android:background="#59b04d"
+            android:layout_weight="2"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/navarLogo"
-                android:layout_width="10dp"
-                android:layout_height="40dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/naver_logo" />
+                app:srcCompat="@drawable/btn_naver_signin" />
 
-            <TextView
-                android:id="@+id/naverLoginText"
-                android:layout_width="150dp"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:fontFamily="@font/tmoney_regular"
-                android:gravity="center"
-                android:text="네이버로 간편 로그인"
-                android:textColor="#FFFFFF"
-                android:textSize="20sp" />
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="66dp"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:background="#fee600"
+            android:layout_weight="2"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/navarLogo2"
-                android:layout_width="10dp"
-                android:layout_height="40dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/kakao_logo" />
+                app:srcCompat="@drawable/bnt_kakao_signin" />
 
-            <TextView
-                android:id="@+id/kakaoLoginText"
-                android:layout_width="150dp"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:fontFamily="@font/tmoney_regular"
-                android:gravity="center"
-                android:text="카카오로 간편 로그인"
-                android:textColor="#000000"
-                android:textSize="20sp" />
         </LinearLayout>
 
     </LinearLayout>
