add: 오늘의 컨디션

--- a/EYAK(rev2)/app/src/main/res/layout/alarm_tab_list_view_item.xml
+++ b/EYAK(rev2)/app/src/main/res/layout/alarm_tab_list_view_item.xml
@@ -124,9 +124,9 @@
                     android:fontFamily="@font/tmoney_regular"
                     android:gravity="center"
                     android:includeFontPadding="false"
-                    android:text="다음 약 복용까지"
+                    android:text="다음 약 복용까지:"
                     android:textColor="#757863"
-                    android:textSize="18dp" />
+                    android:textSize="16sp" />
 
                 <Space
                     android:layout_width="0dp"
