--- a/EYAK(rev2)/app/src/main/res/layout/fragment_today_condition.xml
+++ b/EYAK(rev2)/app/src/main/res/layout/fragment_today_condition.xml
@@ -31,6 +31,7 @@
             android:gravity="center"
             android:includeFontPadding="false"
             android:text="오늘의 컨디션"
+            android:textColor="#757863"
             android:textSize="20sp" />
 
         <Space
@@ -68,6 +69,7 @@
                         android:layout_weight="1" />
 
                     <LinearLayout
+                        android:id="@+id/badLinearLayout"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="2"
@@ -100,6 +102,7 @@
                         android:layout_weight="1" />
 
                     <LinearLayout
+                        android:id="@+id/normalLinearLayout"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="2"
@@ -131,6 +134,7 @@
                         android:layout_weight="1" />
 
                     <LinearLayout
+                        android:id="@+id/goodLinearLayout"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="2"
